[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refactor_test"
version = "0.0.1"
description = "test package for master students"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Anton Domnin", email = "a.v.daomnin@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/akvatol/test_refactor"
Repository = "https://github.com/akvatol/test_refactor"

[project.scripts]
refactor-test = "src.main:main"